【自然人】智能合約，Web API 化。
