# api/controllers/Government.js
@@ -13,15 +13,15 @@ function GetPerson(req, res) {
 
   // TODO 看是不是先讀取queue內是否有相同contract的寫入時間，以queue內的資料當作是最新的。
 
-  Government.GetPerson(person_code).then(function (person_hash) {
-    if (person_hash != 0x0000000000000000000000000000000000000000) {
-      console.log(person_hash);
+  Government.GetPerson(person_code).then(function (person_data_hash) {
+    if (person_data_hash != 0x0000000000000000000000000000000000000000) {
+      console.log(person_data_hash);
       //var result = util.format("GetPerson('%s') = %s", person_code, person_hash);
-      var person = {
+      var PersonOutputObject = {
         person_code: person_code,
-        person_hash: person_hash
+        person_data_hash: person_data_hash
       };
-      res.json(person);
+      res.json(PersonOutputObject);
     } else {
       res.json('N/A');
     }
@@ -34,6 +34,8 @@ function SetPerson(req, res) {
   var person_code = req.swagger.params.person.person_code || '';
   var person_data = req.swagger.params.person.person_data || '';
 
+  // ToDo: 資料內容檢查
+
   var person_data_hash = web3.sha3(person_data);
 
   var e_SetPerson_listener = Person._originalContractObject.e_SetPerson({
@@ -41,15 +43,20 @@ function SetPerson(req, res) {
   });
   e_SetPerson_listener.watch(function (err, logs) {
     if (!err) {
-      var TransactionResponse = {
-        txHash: logs.transactionHash
+      var PersonOutputObject = {
+        person_code: person_code,
+        person_data_hash: person_data_hash
       };
-      res.json(TransactionResponse);
+      io.sockets.emit('e_SetPerson', PersonOutputObject);
     } else {
       // log err
-      res.json(err);
     }
     e_SetPerson_listener.stopWatching();
   });
-  Government.SetPerson(person_code, person_data_hash);
+  Government.SetPerson(person_code, person_data_hash).then(function (txHash) {
+    var TransactionResponse = {
+      txHash: txHash
+    };
+    res.json(TransactionResponse);
+  });
 }
